# toden-task-alloc-202510

./: all.objects
task-alloc-sim/: .gitignore  README.md  pyproject.toml  run.py
task-alloc-sim-1120/: analyze_violation.py  comparative_statics.py  debug_run.py  debug_run_config.py  main.py
task-alloc-sim/configs/: base.yaml
task-alloc-sim/configs/markets/: small_2m_3t.yaml  two_machines_two_slots.yaml
task-alloc-sim/configs/prefs/: random_linear_values.yaml
task-alloc-sim/configs/runs/: rsd_then_ttc_baseline.yaml
task-alloc-sim/data/raw/: agent_demand_schema.csv  capacity_schema.csv  valuations_2x2_sample.json  valuations_schema.csv
task-alloc-sim/julia/: run_trial.jl
task-alloc-sim/julia/src/: online_rsd_ttc_core.jl
task-alloc-sim/scripts/: check_incentives_2x3_rsd12_ttc.py  check_incentives_best_response.py  check_strategyproofness.py  ic_check_global.py  ic_check_global_truthA_devB.py  ic_check_global_weak.py  ic_check_time_monotone.py  pack_mre.sh  run_sweep.sh  run_t3_modeA.py
task-alloc-sim/src/allocsim/: config.py  julia_bridge.py  market.py  metrics.py  online_rsd_ttc.py  process.py  report_from_values.py  runners.py  time_monotone.py  utils.py  viz.py
task-alloc-sim/src/allocsim/mechanisms/: rsd_global.py  rsd_multi.py  ttc_chain.py
task-alloc-sim/src/allocsim/prefs/: generators.py  loaders.py
task-alloc-sim/src/allocsim/strategy/: checks.py  deviations.py  time_monotone.py  weak_orders.py
task-alloc-sim/src/allocsim/utils/: report_from_values.py
task-alloc-sim/src/task_alloc_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+66 files in other folders)
